--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,12 @@ author: Bruce MacDonald
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "aboutsred"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
+  Law: ""
 
 # --- Logo --- #
 
