--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Bruce MacDonald
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutsred"
+  About SR&ED: "aboutsred"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
