--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ author: Bruce MacDonald
 navbar-links:
   About SR&ED: "aboutsred"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - CRA : "https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program.html"
+    - Tax Court Decisions: "https://decision.tcc-cci.gc.ca/tcc-cci/en/nav.do"
+  Audit: "audit"
   Law: ""
 
 # --- Logo --- #
