--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navbar-links:
     - CRA : "https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program.html"
     - Tax Court Decisions: "https://decision.tcc-cci.gc.ca/tcc-cci/en/nav.do"
   Audit: "audit"
-  Law: ""
+  Eligibility: ""
 
 # --- Logo --- #
 
