--- a/_config.yml
+++ b/_config.yml
@@ -40,20 +40,20 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "kevin.kelner@conceptinero.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "kevin@conceptinero.com"
+  facebook: Conceptinero
+  github: seenthattinker
+  twitter: Conceptinero
 #  patreon: DeanAttali
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: Conceptinero
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
 #  instagram: deanat78
 #  youtube: user/deanat78
 #  spotify: yourname
-#  telephone: +14159998888
+  telephone: +16472999241
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
@@ -65,7 +65,7 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: This website is a virtual proof that I'm awesome
+rss-description: Subscribe to this blog
 
 # --- General options --- #
 
@@ -74,11 +74,12 @@ share-links-active:
   twitter: true
   facebook: true
   linkedin: true
-  vk: false
+  github: true
+  email: true
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "conceptinero.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
