--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ navbar-links:
     - Tax Court Decisions: "https://decision.tcc-cci.gc.ca/tcc-cci/en/nav.do"
   Audit: "audit"
   Eligibility: "sredEligible"
+  Glossary: "glossary"
 
 # --- Logo --- #
 
